syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";
import "x/go/status/pb/status.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service DeviceCreateService {
  rpc Exec(DeviceCreateRequest) returns (DeviceCreateResponse);
}

service DeviceRetrieveService {
  rpc Exec(DeviceRetrieveRequest) returns (DeviceRetrieveResponse);
}

service DeviceDeleteService {
  rpc Exec(DeviceDeleteRequest) returns (google.protobuf.Empty);
}

message Device {
  string key = 1;
  string name = 2;
  uint32 rack = 3;
  string location = 4;
  string make = 6;
  string model = 7;
  string properties = 8;
  bool configured = 9;
  synnax.status.Status status = 10;
}

message DeviceCreateRequest {
  repeated Device devices = 1;
}

message DeviceCreateResponse {
  repeated Device devices = 1;
}

message DeviceRetrieveRequest {
  repeated string keys = 1;
  repeated string names = 2;
  repeated string makes = 3;
  repeated string models = 4;
  repeated string locations = 5;
  repeated uint32 racks = 6;
  string search = 7;
  uint32 limit = 8;
  uint32 offset = 9;
  bool ignore_not_found = 10;
  bool include_status = 11;
}

message DeviceRetrieveResponse {
  repeated Device devices = 1;
}

message DeviceDeleteRequest {
  repeated string keys = 1;
}
