// Code generated by oracle. DO NOT EDIT.

syntax = "proto3";

package service.device.pb;

import "google/protobuf/struct.proto";
import "x/go/status/pb/status.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/service/device/pb";

message StatusDetails {
  uint32 rack = 1;
  string device = 2;
}

message Device {
  string key = 1;
  uint32 rack = 2;
  string location = 3;
  string make = 4;
  string model = 5;
  string name = 6;
  bool configured = 7;
  google.protobuf.Struct properties = 8;
  optional .x.status.pb.Status status = 9;
}
